# libsandbox

./: .gitignore  CMakeLists.txt  README.md  example.c  hello.c  policygen.py  render.py  test_with_mbedtls.py
LibraryCallPass/: CMakeLists.txt  LibraryCallPass.cpp
monitor/: deploy.sh  monitor.c  monitor.py  setup.sh
test_with_mbedtls/: build.py  create_db.py  generate.py
utils/: reduce.py  render.py
